--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.11.16",
     "chai": "^5.0.3",
+    "eslint": "^8.56.0",
     "mocha": "^10.2.0",
     "ts-node": "^10.9.2",
     "typedoc": "^0.25.7",
