--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,5 @@
     "lib": ["ES2022"],
     "moduleResolution": "Node"
   },
-  "include": ["./src/*.ts", "./"],
+  "include": ["core/*.ts", "./"],
 }
