--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,20 @@
     "target": "ES2022",
     "module": "ES2022",
     "lib": ["ES2022"],
-    "moduleResolution": "Node"
+    "moduleResolution": "Node",
+    "outDir": "./dist/"
+  },
+  "typedocOptions": {
+        "entryPoints": [
+          "interfaces/IAccount.ts", 
+          "interfaces/IEmissionCenter.ts",
+          "interfaces/IMessage.ts",
+          "core/AccountBuilder.ts",
+          "core/EmissionCenter.ts",
+          "core/TransferService.ts",
+          "core/UsersNetwork.ts",
+        ],
+        "out": "docs"
   },
   "include": ["core/*.ts", "./"],
 }
